[package]
name = "jy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../bevy", features = ["dynamic"]  }
# bevy = {git = "https://github.com/bevyengine/bevy"}
rand = "0.8.4"
config="0.11.0"
anyhow = "1.0.52"
serde = "1.0.133"

