[package]
name = "jy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../bevy", features = ["dynamic", "mp3"] }
# bevy = {git = "https://github.com/bevyengine/bevy"}
rand = "0.8.4"
config = "0.11.0"
anyhow = "1.0.52"
serde = "1.0.133"
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.4.3"
futures-lite = "1.4.0"
itertools = "0.10.2"
