[package]
name = "jy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
jy-derive = { path = "./jy-derive" }
#bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.8.4"
config = "0.11.0"
anyhow = "1.0.52"
serde = "1.0.133"
lazy_static = "1.4.0"
byteorder = "1.4.3"
futures-lite = "1.4.0"
itertools = "0.10.2"
console_error_panic_hook = "0.1"
bevy_reflect = { path = "../bevy/crates/bevy_reflect" }
bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
rlua = "0.19.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { path = "../bevy" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { path = "../bevy", features = ["dynamic", "mp3"] }
